[gd_scene load_steps=27 format=3 uid="uid://nw4erm8gqky6"]

[ext_resource type="Script" uid="uid://c564w2bpx7ukl" path="res://source/practice_level.gd" id="1_mywij"]
[ext_resource type="Texture2D" uid="uid://chroruch1fd6o" path="res://source/practicemode.png" id="2_mywij"]
[ext_resource type="PackedScene" uid="uid://crmsvxie0bwea" path="res://scenes/algorithm_executer.tscn" id="3_25emc"]
[ext_resource type="PackedScene" uid="uid://c84hilvcwcvgs" path="res://scenes/algorithm_menu.tscn" id="4_qh7p1"]
[ext_resource type="Script" uid="uid://072ts06p8gbv" path="res://sort_timer.gd" id="5_nsrdn"]
[ext_resource type="Texture2D" uid="uid://cb4ptbniqi3dk" path="res://sprites/frame_00_delay-0.04s.png" id="6_keyi3"]
[ext_resource type="Texture2D" uid="uid://bh5aupnm0huvn" path="res://sprites/frame_01_delay-0.04s.png" id="7_2ufi1"]
[ext_resource type="Texture2D" uid="uid://bk5l4iywtxsbl" path="res://sprites/frame_02_delay-0.05s.png" id="8_tgikd"]
[ext_resource type="Texture2D" uid="uid://b8bdqqvdmca7" path="res://sprites/frame_03_delay-0.04s.png" id="9_5m4yx"]
[ext_resource type="Texture2D" uid="uid://djj8f7o5ental" path="res://sprites/frame_04_delay-0.04s.png" id="10_o8gya"]
[ext_resource type="Texture2D" uid="uid://y7l8a00uewp1" path="res://sprites/frame_05_delay-0.04s.png" id="11_hh7vj"]
[ext_resource type="Texture2D" uid="uid://b0x7vkx1ec1xi" path="res://sprites/frame_06_delay-0.04s.png" id="12_j4geh"]
[ext_resource type="Texture2D" uid="uid://bn3s0xslgg5gx" path="res://sprites/frame_07_delay-0.04s.png" id="13_0he4i"]
[ext_resource type="Texture2D" uid="uid://dl4txeu4dm6bw" path="res://sprites/frame_08_delay-0.05s.png" id="14_231ay"]
[ext_resource type="Texture2D" uid="uid://cou1ryuv3xkp0" path="res://sprites/frame_09_delay-0.04s.png" id="15_qcsxv"]
[ext_resource type="Texture2D" uid="uid://c8x83osbtl7kv" path="res://sprites/frame_10_delay-0.04s.png" id="16_aw0bn"]
[ext_resource type="Texture2D" uid="uid://dtjd2agcd1pun" path="res://sprites/frame_11_delay-0.04s.png" id="17_2pe5y"]
[ext_resource type="Texture2D" uid="uid://bve0qg1xrlei6" path="res://sprites/frame_12_delay-0.04s.png" id="18_cpien"]
[ext_resource type="Texture2D" uid="uid://dwd2e1be5y56w" path="res://sprites/frame_13_delay-0.04s.png" id="19_20nb4"]
[ext_resource type="Texture2D" uid="uid://buehkylqfx0sk" path="res://sprites/frame_14_delay-0.05s.png" id="20_egh8a"]
[ext_resource type="Texture2D" uid="uid://cxt5ltudfekoa" path="res://sprites/frame_15_delay-0.04s.png" id="21_50smb"]
[ext_resource type="Texture2D" uid="uid://bk63kdlpu1ya1" path="res://sprites/frame_16_delay-0.04s.png" id="22_h1ruq"]
[ext_resource type="Texture2D" uid="uid://b7xa60wg0vfxs" path="res://sprites/frame_17_delay-0.04s.png" id="23_d0hp0"]
[ext_resource type="Texture2D" uid="uid://cwxre38buu470" path="res://sprites/frame_18_delay-0.04s.png" id="24_a1qvv"]
[ext_resource type="Texture2D" uid="uid://ctqyv5eaiq8vu" path="res://sprites/frame_19_delay-0.04s.png" id="25_8ofgx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cr74b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_keyi3")
}, {
"duration": 1.0,
"texture": ExtResource("7_2ufi1")
}, {
"duration": 1.0,
"texture": ExtResource("8_tgikd")
}, {
"duration": 1.0,
"texture": ExtResource("9_5m4yx")
}, {
"duration": 1.0,
"texture": ExtResource("10_o8gya")
}, {
"duration": 1.0,
"texture": ExtResource("11_hh7vj")
}, {
"duration": 1.0,
"texture": ExtResource("12_j4geh")
}, {
"duration": 1.0,
"texture": ExtResource("13_0he4i")
}, {
"duration": 1.0,
"texture": ExtResource("14_231ay")
}, {
"duration": 1.0,
"texture": ExtResource("15_qcsxv")
}, {
"duration": 1.0,
"texture": ExtResource("16_aw0bn")
}, {
"duration": 1.0,
"texture": ExtResource("17_2pe5y")
}, {
"duration": 1.0,
"texture": ExtResource("18_cpien")
}, {
"duration": 1.0,
"texture": ExtResource("19_20nb4")
}, {
"duration": 1.0,
"texture": ExtResource("20_egh8a")
}, {
"duration": 1.0,
"texture": ExtResource("21_50smb")
}, {
"duration": 1.0,
"texture": ExtResource("22_h1ruq")
}, {
"duration": 1.0,
"texture": ExtResource("23_d0hp0")
}, {
"duration": 1.0,
"texture": ExtResource("24_a1qvv")
}, {
"duration": 1.0,
"texture": ExtResource("25_8ofgx")
}],
"loop": true,
"name": &"gif_animation",
"speed": 5.0
}]

[node name="Level" type="Node2D"]
script = ExtResource("1_mywij")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -13.0
offset_top = -18.0
offset_right = 1174.0
offset_bottom = 666.0
texture = ExtResource("2_mywij")

[node name="AlgorithmExecuter" parent="." instance=ExtResource("3_25emc")]

[node name="AlgorithmMenu" parent="." instance=ExtResource("4_qh7p1")]
position = Vector2(-83, 3)

[node name="MenuButton" type="Button" parent="."]
offset_left = 67.0
offset_top = 160.0
offset_right = 198.0
offset_bottom = 215.0
text = "Main Menu"

[node name="ShuffleButton" type="Button" parent="."]
offset_left = 87.0
offset_top = 319.0
offset_right = 175.0
offset_bottom = 350.0
text = "Shuffle"

[node name="LargeButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 540.0
offset_right = 196.0
offset_bottom = 571.0
text = "Large Data Set"

[node name="SmallButton" type="Button" parent="."]
offset_left = 74.0
offset_top = 466.0
offset_right = 194.0
offset_bottom = 497.0
text = "Small Data Set"

[node name="LevelLabel" type="Label" parent="."]
offset_left = 71.0
offset_top = 62.0
offset_right = 125.0
offset_bottom = 85.0
text = "Level 0"

[node name="TimerLabel" type="Label" parent="."]
visible = false
offset_left = 49.0
offset_top = 593.0
offset_right = 89.0
offset_bottom = 616.0
script = ExtResource("5_nsrdn")

[node name="DeathScreen" type="AnimatedSprite2D" parent="TimerLabel"]
position = Vector2(531.5, -271.99997)
scale = Vector2(1.8949842, 1.4374999)
sprite_frames = SubResource("SpriteFrames_cr74b")
animation = &"gif_animation"

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ShuffleButton" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="LargeButton" to="." method="_on_large_button_pressed"]
[connection signal="pressed" from="SmallButton" to="." method="_on_small_button_pressed"]
[connection signal="animation_looped" from="TimerLabel/DeathScreen" to="TimerLabel" method="_on_death_screen_animation_looped"]
